모니터링 시스템 구축 - cloudwatch 활용

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: 8080
+
 auth:
   jwt:
     issuer: team.sparta.com
@@ -12,3 +15,11 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
+  profiles:
+    active: local
+
+cloud:
+  aws:
+    credentials:
+      accessKey: AKIA2S26HGZE5IGERLGT
+      secretKey: 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
